fix(shs-6446): align image to top in horizontal cards

--- a/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_card.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/partials/components/_card.scss
@@ -107,6 +107,7 @@ $container-medium: hb-calculate-rems(768px);
 
   .hb-card--horizontal & {
     grid-area: a;
+    align-self: flex-start;
 
     @include hb-themes(('colorful', 'airy')) {
       @container card (width > #{$container-small}) {
